--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,8 @@
+/ChoisirAction.class
+/TestArme.class
+/TestCarte.class
+/TestEquipement.class
+/TestInventaire.class
+/TestItem.class
+/TestPotion.class
 /ehptm/
